--- a/resume.qmd
+++ b/resume.qmd
@@ -1,10 +1,77 @@
 ---
-title: "about me"
-subtitle: "my data science portfolio"
-# use quarto markdown to 
+title: "Ethan Saline's Resume"
 ---
 
-# Title 1 Header
-## Title 2 Header
+**📧 Email:** [e.s.w.saline@gmail.com](mailto:e.s.w.saline@gmail.com)  
+**💼 LinkedIn:** [linkedin.com/in/ethan-saline](https://linkedin.com/in/ethan-saline)  
+**📍 Current Location:** Rexburg, Idaho  
 
-[MarkDown Basics](https://quarto.org/docs/authoring/markdown-basics.html#links-images)
+---
+
+## Education
+
+**Brigham Young University – Idaho**  
+*Bachelor of Applied Science in Data Science* | Minor: Statistics  
+**April 2023 – December 2026**
+
+- **GPA:** 3.94 
+- Coursework: Machine Learning, Statistical Modeling, Time Series Analysis, Data Wrangling, Predictive Analytics, Big Data Analysis, Bioinformatics
+
+---
+
+## Technical Skills
+
+- **Programming:** Python, R, SQL  
+- **Machine Learning:** Supervised & Unsupervised Learning, CNNs, Linear/Logistic Regression  
+- **Statistics & Data Analysis:** Statistical Modeling, Time Series Decomposition & Forecasting, Feature Engineering, Data Visualization  
+- **Tools:** Jupyter, Git, FRED, Research Data Pipelines  
+
+---
+
+## Experience
+
+### Data Science Lab Manager  
+**Brigham Young University – Idaho** | *April 2025 – Present*  
+
+- Designed and implemented **data collection and analysis systems** supporting student research and faculty projects  
+- Mentored students in **machine learning, R, Python, and statistical modeling**  
+- Ensured consistency and quality across lab trainings and data workflows  
+
+### Math Lab Supervisor  
+**Brigham Young University – Idaho** | *August 2024 – Present*  
+
+- Tutored students in **22 math and statistics courses**, improving learning outcomes  
+- Supervised and trained peer tutors to maintain instructional quality and consistency  
+- Supported courses including Calculus, Statistics, and Probability Modeling  
+
+### Data Science Programming Teaching Assistant  
+**Brigham Young University – Idaho** | *June 2025 – December 2025*  
+
+- TA for **3 course sections** (2 online, 1 in-person)  
+- Assisted students with **data science programming, debugging, and best practices**  
+- Reinforced machine learning and data analysis fundamentals  
+
+---
+
+## Certifications
+
+- **Machine Learning Specialization** – Stanford University Online  
+  - Supervised Learning Algorithms Certificate 
+  - Unsupervised Learning Algorithms Certificate
+  - Advanced Learning Models Certificate
+  
+- **Machine Learning** - Brigham Young University Idaho
+
+---
+
+## Languages
+
+- **English:** Native/Bilingual  
+- **Portuguese:** Bilingual  
+
+---
+
+**Profile Statement:**  
+*Driven data scientist with a strong work ethic and passion for turning complex data into actionable insights.*
+
+*You're gonna want me on your team!*
