--- a/resume.qmd
+++ b/resume.qmd
@@ -66,7 +66,7 @@ title: "Ethan Saline's Resume"
 
 ## Languages
 
-- **English:** Native/Bilingual  
+- **English:** Native 
 - **Portuguese:** Bilingual  
 
 ---
